# joy-hello-lab-53ff5e6f

./: .env  .env.example  .gitignore  check_error.mjs  check_error2.mjs  check_error3.mjs  check_error4.mjs  index.html  package-lock.json  package.json  run_addon_migration.mjs  test.ts  test_error.mjs  test_error2.mjs  vite.config.ts
.lovable/: plan.md
public/: version.json
scripts/: export-data.mjs  import-data.mjs  migrate_categories.mjs  migrate_categories.ps1  schema-init.sql
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/components/: AuthModal.tsx  CustomersPage.tsx  InstallPWA.tsx  LoginPage.tsx  NewOrderForm.tsx  OfflineIndicator.tsx  OrderCard.tsx  OrderDetail.tsx  PWALifecycle.tsx  ProductsPage.tsx  SettingsPage.tsx  VersionWatermark.tsx
src/hooks/: useAddons.ts  useAuth.tsx  useCategories.ts  useChatMessages.ts  useCustomers.ts  useEmployees.ts  useOfflineSync.ts  useOnlineStatus.ts  useOrders.ts  useProducts.ts  useSettings.ts  useStorage.ts
src/lib/: ExportService.ts  PrintService.ts  authUtils.ts  cycleUtils.ts  offlineStorage.ts
src/pages/: CustomerMenu.tsx  Index.tsx  SaidaConfirmacao.tsx
src/types/: order.ts
supabase/: config.toml
supabase/migrations/: 20260401143439_a82a364d-f144-46a5-bc0d-a293a58cc1a6.sql  20260401143915_deca6d47-4546-481c-972f-64ef54d51126.sql  20260402122119_28cfe878-f77e-4188-ab24-d7ab1f7b8a60.sql  20260403000000_categories_init.sql  20260403000001_employees_auth.sql  20260405000000_fix_missing_columns.sql  (+18 more)
(+29 files in other folders)
