[package]
name = "gestao-de-pedidos"
version = "1.0.0"
description = "Sistema de Gestão de Pedidos - Império Chiclets"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
